--- a/backserver/config.ini
+++ b/backserver/config.ini
@@ -1,10 +1,24 @@
 [CONFIG]
-SAVE_IMAGE_DIR:Picture
-MSGQUEUE_KEY:msgkey.file
+SAVE_IMAGE_DIR = Picture
+LOGFILE=server.log
 [CAMERA]
-CAMERA_SOCKET_PORT:9876
-CAMERA_PORT:8080
-CAMERA_IP:192.168.1.123
+#python程序与C程序通信的端口
+SOCKET_PORT = 9898
+#相机的配置端口
+CAMERA_PORT = 8080
+#相机IP与显示器的对应关系 IP-显示器编号-分辨率
+#显示器编号是表示显示器逻辑连接上属于第几块屏幕，主屏幕为0，副屏幕依次为1,2,3...
+CAMERA_IP_AND_SCREEN = 192.168.200.211-0-1920*1080,192.168.200.213-1-1920*1080
+#相机的申请方式:MAX表示申请所有相机,MIN表示仅仅申请一个,写入数字表示申请数字对应数量的相机
+CAMERA_APPLY_MODE = MAX
+#客户度对相机的占用方式,MATCH对应匹配模式，每个客户端有一个固定的相机。PREEMPTION对应抢占,所有客户端争抢所有可用的相机资源
+CLIENT_CAMERA_MODE = MATCH
 [WEBSKCKET]
-WEBSOCKET_PORT:4000
-LOGFILE:server.log
+#websocket对外部客户端的端口
+PORT = 4000
+[NAS]
+USERNAME=duanshuai
+PASSWORD=19870209
+ADDRESS=192.168.200.239
+PORT=5000
+USERDIR=/var/services/homes/duanshuai
