更新协议(相机名长度可变并改为字符串格式)，修改moveImage和其他shell脚本

--- a/backserver/config.ini
+++ b/backserver/config.ini
@@ -1,6 +1,7 @@
 [CONFIG]
 SAVE_IMAGE_DIR = Picture
-LOGFILE=server.log
+LOGFILE=Log/server.log
+DEBUGLOGFILE=Log/debug.log
 [CAMERA]
 #python程序与C程序通信的端口
 SOCKET_PORT = 9898
