新增函数修饰符，对参数与返回值类型进行了声明和限定

--- a/backserver/config.ini
+++ b/backserver/config.ini
@@ -1,6 +1,7 @@
 [CONFIG]
 SAVE_IMAGE_DIR = Picture
 LOGFILE=Log/server.log
+CLOGFILE=Log/clogfile.log
 DEBUGLOGFILE=Log/debug.log
 [CAMERA]
 #python程序与C程序通信的端口
