修改了自启动方式

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ backserver/__pycache__
 #*.[oa]
 
 backserver/Picture/*
+!backserver/Picture
 backserver/image_rsync/*
+!backserver/image_rsync
 backserver/Log/*
-
+!backserver/Log
